--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "@types/express": "^4.17.17",
         "dotenv": "^16.3.1",
+        "express": "^4.18.2",
         "pg": "^8.11.2",
         "pg-ts": "^2.5.1",
         "sequelize": "^6.32.1",
