--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
         "pg-ts": "^2.5.1",
         "sequelize": "^6.32.1",
         "sequelize-typescript": "^2.1.5"
+    },
+    "engines": {
+        "node": ">=16.13.0"
     }
 }
