--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "dist/server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "NODE='develop' concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
+        "dev": "concurrently \"npm run watch-compile\" \"npm run watch-dev\"",
         "watch-compile": "swc src -w --out-dir dist",
         "watch-dev": "nodemon --watch \"dist/**/*\" -e js ./dist/server.js",
         "build": "swc src -d dist",
@@ -29,9 +29,7 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
-        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
-        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "pg": "^8.11.2",
