--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "watch-compile": "swc src -w --out-dir dist",
         "watch-dev": "nodemon --watch \"dist/**/*\" -e js ./dist/server.js",
         "build": "swc src -d dist",
-        "start": "NODE_ENV=production node dist/server.js",
+        "start": "node dist/server.js",
         "eslint:fix": "eslint --fix"
     },
     "author": "",
