--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
         "typescript": "^5.1.6"
     },
     "dependencies": {
+        "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/nodemailer": "^6.4.9",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "nodemailer": "^6.9.4",
         "pg": "^8.11.2",
         "pg-ts": "^2.5.1",
         "sequelize": "^6.32.1",
-        "sequelize-typescript": "^2.1.5"
+        "sequelize-typescript": "^2.1.5",
+        "uuid": "^9.0.0",
+        "uuidv4": "^6.2.13"
     },
     "engines": {
         "node": ">=16.13.0"
