--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "devDependencies": {
         "@swc/cli": "^0.1.62",
         "@swc/core": "^1.3.74",
+        "@types/bcrypt": "^5.0.0",
         "@types/node": "^20.4.8",
         "@typescript-eslint/eslint-plugin": "^6.2.1",
         "@typescript-eslint/parser": "^6.2.1",
@@ -33,6 +34,8 @@
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.2",
         "@types/nodemailer": "^6.4.9",
+        "bcrypt": "^5.1.1",
+        "bcrypt-ts": "^4.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
